Use alternate fig2, touch up references

--- a/paper.tex
+++ b/paper.tex
@@ -189,8 +189,8 @@ At the bottom, the daemons lay a solid foundation to build the variety of client
 Client sophistication can be introduced naturally, as novel experiments are tested and refined.
 
 \begin{figure}
-\includegraphics[width=\columnwidth]{figures/clients}
-  \caption{  \label{fig:foundation} A caption}
+\includegraphics[width=\columnwidth]{figures/client_spectrum},
+	\caption{  \label{fig:foundation} \yaq{} scales from simple scripts to integrations with featureful frameworks.}
 \end{figure}
 
 
