--- a/references.bib
+++ b/references.bib
@@ -51,12 +51,13 @@ Data Acquisition and Management},
 
 @misc{AvroSpecification,
  title = {Apache Avro Specification},
+ year = {2022},
  url = {https://avro.apache.org/docs/1.11.1/specification/},
  note = {Accessed: 2022-10-02}
 }
 
 @misc{Bogdanowicz2022,
- author = {Bogdanowicz, Nate and Rogers, Christopher and Weber, Sébastien and Zakv,  and Pelissier, Sylvain and Wheeler, Jonathan and Cxz,  and Marazzi, Francesco and Eedm,  and Galinskiy, Ivan},
+ author = {Bogdanowicz, Nate and Rogers, Christopher and Weber, Sébastien and {Zakv}  and Pelissier, Sylvain and Wheeler, Jonathan and {Cxz}  and Marazzi, Francesco and {Eedm}  and Galinskiy, Ivan},
  title = {mabuchilab/Instrumental: 0.7},
  publisher = {Zenodo},
  year = {2022},
@@ -88,9 +89,9 @@ Analysis of Vibronic Mode Coupling in Molecules},
 @article{DalesioLR1991a,
  author = {Dalesio, L. R. and Kraimer, M. R. and Kozubal, A. J.},
  title = {EPICS Architecture},
+ journal = {ICALEPCS},
  year = {1991},
- volume = {91},
- jouranl = {ICALEPCS}
+ volume = {91}
 }
 
 @phdthesis{KainSchuyler2017a,
@@ -161,6 +162,14 @@ Four-Wave Mixing Spectroscopy},
  doi = {10.1021/jp046137j}
 }
 
+@phdthesis{MeyerKentAlbert2004b,
+ author = {Meyer, Kent Albert},
+ title = {Freqncy-Scanned Ultrafast Spectroscopic Techniques
+Applied to Infrared Four-Wave Mixing Spectroscopy},
+ year = {2004},
+ school = {University of Wisconsin--Madison}
+}
+
 @manual{modbus,
  title = {MODBUS APPLICATION PROTOCOL SPECIFICATION},
  year = {2012},
@@ -185,6 +194,7 @@ Electronic and Vibrational Excitations},
 
 @misc{nidaqmx,
  title = {Getting Started with NI-DAQmx},
+ year = {2022},
  url = {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
  note = {Accessed: 2022-10-02}
 }
@@ -198,11 +208,13 @@ Electronic and Vibrational Excitations},
 
 @misc{pymeasure,
  title = {PyMeasure scientific package},
+ year = {2022},
  url = {https://pymeasure.readthedocs.io/},
  note = {Accessed: 2022-10-02}
 }
 
 @book{Raymond_1996,
+ author = {Raymond, Eric S.},
  title = {The new hacker’s dictionary},
  publisher = {MIT Press},
  year = {1996},
@@ -252,6 +264,7 @@ Photophysics},
 @misc{trspectrometer,
  author = {Tapping, Patrick},
  title = {TRSpectrometer},
+ year = {2021},
  url = {https://trspectrometer.readthedocs.io/en/latest/},
  note = {Accessed: 2022-10-02}
 }
