Add Hardware-Control and pylablib

--- a/references.bib
+++ b/references.bib
@@ -94,6 +94,21 @@ Analysis of Vibronic Mode Coupling in Molecules},
  volume = {91}
 }
 
+@article{Giesbrecht_2022,
+ author = {Giesbrecht, Grant and Amsellem, Ariel and Bauer, Timo and Mak, Brian and Wynne, Brian and Qin, Zhihao and Persaud, Arun},
+ title = {Hardware-Control: Instrument control and automation
+package},
+ journal = {Journal of Open Source Software},
+ publisher = {The Open Journal},
+ year = {2022},
+ month = {apr},
+ number = {72},
+ volume = {7},
+ pages = {2688},
+ url = {https://doi.org/10.21105%2Fjoss.02688},
+ doi = {10.21105/joss.02688}
+}
+
 @phdthesis{KainSchuyler2017a,
  author = {Kain, Schuyler},
  title = {Transition of Frequency-Domain Coherent
@@ -204,6 +219,14 @@ Electronic and Vibrational Excitations},
  year = {2021},
  issue = {12},
  organization = {Teledyne Princeton Instruments}
+}
+
+@misc{pylablib,
+ author = {Shkarin, Alexey},
+ title = {pylablib},
+ year = {2022},
+ url = {https://pypi.org/project/pylablib},
+ note = {Accessed: 2022-10-02}
 }
 
 @misc{pymeasure,
