--- a/paper.tex
+++ b/paper.tex
@@ -28,11 +28,11 @@
 
 \preprint{AIP/123-QED}
 
-\title{The yaq Project: \\ A Protocol for Scientific Instrumentation}
+\title{The yaq Project: \\ A Standard for Scientific Instrumentation}
 \author{Kyle F. Sunden}
 \author{Daniel D. Kohler}
-\author{Peter C. Parilla}
 \author{Kent A. Meyer}
+\author{Peter L. Cruz Parilla}
 \author{John C. Wright}
 \author{Blaise J. Thompson}
 \affiliation{
@@ -55,49 +55,50 @@ secondary publications and for information retrieval purposes.
 Instrumentation development is a key part of the scientific enterprise.
 Novel instruments are typically constructed of many individual components, purchased and home-built.
 Orchestration software must communicate with each hardware component in the course of a scientific experiment.
-This can involve utilization of many protocols: NI DAQmx\cite{nidaqmx}, SCPI\cite{scpi}, ModBus\cite{modbus}, PICam\cite{picam}, Thorlabs APT\cite{thorlabs_apt}, among many others.
+This can involve utilization of many interfaces: NI DAQmx\cite{nidaqmx}, SCPI\cite{scpi}, ModBus\cite{modbus}, PICam\cite{picam}, Thorlabs APT\cite{thorlabs_apt}, among many others.
 The challenge of integrating all of these is a frustrating piece of the modern instrument development process.
 Weeks can be spent just integrating one new component into an existing project.
 Code reusability is typically poor, and technical debt grows quickly in academic and educational contexts.
 Scientists may struggle to rapidly innovate on their experimental design when each hardware addition requires major software development.
 
-Some large user-facilities have addressed protocol complexity via the adoption unified protcols, such as EPICS \cite{DalesioLR1991a} or TANGO \cite{AGotz1999TANGOA}.
-The unified protocols define a standard network interface for any hardware component.
-Orchestration software can target this unified protocol for reading and writing hardware state.
-Small background services are written to translate the myriad component protocols into the standard EPICS IOCs and TANGO Devices.
-These programs are peformant, but require expert management to set up and provide descriptions via a separate server program.
+Some large user-facilities have addressed interface complexity via the adoption unified standards, such as EPICS \cite{DalesioLR1991a} or TANGO \cite{AGotz1999TANGOA}.
+The unified standards define a network interface for any hardware component.
+Orchestration software can target this unified standards for reading and writing hardware state.
+Small background services are written to translate the myriad component interfaces into the standard EPICS IOCs and TANGO Devices.
+These programs are performant, but require expert management to set up and provide descriptions via a separate server program.
 These projects are impressive at facility scale, but in our experience these do not scale well to single-investigator lab environments.
 
 As smaller research labs have grown in experimental complexity, many individual labs have created domain-specific orchestration software.
-Most small custom research instrumentation continues to rely on monolithic software which has hardcorded protocol support for each particular connected device.
-These monolithic applications tend to be very inflexible and difficult to develop.
 In the last few years, several open source projects by-and-for small-scale experimentalists have grown in popularity\cite{WeberSebastien2021a,Bogdanowicz2022,trspectrometer,Koerner_2019,Campagnola_2014,pymeasure,Giesbrecht_2022,pylablib}.
 While this growth is encouraging, many of these are limited by their focus on particular types of hardware or particular experimental domains.
-To our knowledge, none of these projects take a strict protocol-based approach.
+Most small custom research instrumentation continues to rely on monolithic software which has hard-coded interface support for each particular connected device.
+These monolithic applications tend to be inflexible and difficult to develop.
+%To our knowledge, there are no existing open source projects that attempt to define a unified standard for hardware control of small scale experiments.
 
-We have created a new protocol for scientific instrumentation, yaq.
-This protocol attempts to borrow the most important ideas from established projects while retaining simplicity appropriate for small research labs.
-We have built this protocol to be self-describing, portable, and reusable wherever possible.
+We have created a new network-based standard for scientific instrumentation, \yaq{}.
+This standard borrows the most important ideas from established projects used by large user facilities while retaining simplicity appropriate for small research labs.
+We have built this standard to be self-describing, portable, and reusable wherever possible.
 Our primary goal has been to make an interface which simplifies orchestration software development as much as possible.
 
-Here we discuss the design of the yaq protocol in the context of four challenges facing instrument designers.
+Here, we discuss the design of the \yaq{} standard in the context of four challenges facing instrument designers.
 First, we discuss how particularly challenging hardware interfaces can become seemingly insurmountable barriers to software control.
-Next, we discuss how inflexible orchestration software can limit experimental flexibility.
+Next, we discuss how inflexible orchestration software can limit experimental creativity.
 Next, we focus on challenges that arise when enhancing or modifying existing instruments with new hardware.
-Finally, we discuss the heavy software maitenence burden that many instrument designers face.
-In each case we will highlight how the yaq project is designed to aliveate alleviate that challenge.
-Several case studies provide a view into the flexible ways that yaq can be applied to perform very different scientific experiments.
+Finally, we discuss the heavy software maintenance burden that many instrument designers face.
+In each case, we will highlight how the \yaq{} project is designed to alleviate that challenge.
+Several case studies provide a view into the flexible ways that \yaq{} can be applied to perform different scientific experiments.
+This document provides an overview of the concepts and motivations behind \yaq{}, but does not serve as a formal specification\cite{yaq_fyi}.
 
 \section{Hardware Interface Challenges}
 
 Hardware-software interface design presents several technical challenges.
 In this section we describe the architecture of the \yaq{} framework in light of three major barriers that we have encountered in scientific instrumentation development.
-First barrier: Multiple incompatible protocols are used to communicate with each component of the system.
-A fully automated system must be able to use all of these protocols, a daunting task for scientists who do not specialize in software development.
+First barrier: Multiple interfaces are used to communicate with each component of the system.
+A fully automated system must be able to use all of these interfaces, a daunting task for scientists who do not specialize in software development.
 Second barrier: Certain specialty hardware have inconvenient interface requirements.
-A specialty camera will only work with an ISA card and drivers for Windows XP.
-A data acquisition manufacturer provides an API that only works in Python 3.7.
-A graduate student wishes to drive some stepper motor using a Raspberry Pi.
+A camera will only work with an obsolete interface card and drivers for Windows XP.
+A data acquisition manufacturer provides an Application Programmer Interface (API) that only works in Python 3.7.
+A graduate student wishes to drive several stepper motors using a Raspberry Pi.
 Third barrier: Some hardware interfaces are blocking.
 A graphical user interface stalls while waiting for a camera to collect data.
 Custom orchestration software needs to be closed before the manufacturers configuration software can be used.
@@ -109,7 +110,7 @@ A graduate student finds themself needing to master advanced concepts in concurr
 \end{figure}
 
 Figure \ref{fig:network} diagrams the \yaq{} architecture.
-Here we show three different computers connected via an ethernet network.
+Here, we show three different computers connected via an ethernet network.
 The top and bottom computer are connected to monitors for interactive use while the middle computer is only accessible via the network.
 This might represent a complex scientific instrument involving several operator terminals as well as embedded computers.
 At the top, a single computer is connected to four hardware peripherals through RS232, TTL, USB, and PCI as indicated by the colored lines.
@@ -120,11 +121,11 @@ The middle computer is connected two two additional peripherals, and runs daemon
 Besides communicating with the hardware peripheral, each daemon can communicate with other programs, ``clients'',  through the network.
 The four client programs shown in Figure \ref{fig:network} can each communicate with all six hardware peripherals shown.
 As an example, a client running on the bottom computer could communicate with the RS232 peripheral shown in green via the following path: client $\leftrightarrow$ network switch $\leftrightarrow$ top computer $\leftrightarrow$ daemon $\leftrightarrow$ hardware peripheral.
-This powerful architecture can scale down to single computers or up to many computers, including fully remote operator interfaces.
-Superficially, this network-based client-server design is identical to EPICS and TANGO \cite{DalesioLR1991a}\cite{AGotz1999TANGOA}.
+This powerful architecture can scale down to a single computer or up to many networked computers, including fully remote operator interfaces.
+This client-server architecture offers similar network capabilities to EPICS and TANGO.
 As we will show, usage of standards and the creation of tooling makes this architecture accessible to instrument builders outside of large facilities.
 
-In \yaq{}, communication between daemons and clients is performed over TCP/IP using a protocol called Apache Avro RPC \cite{AvroSpecification}.
+In \yaq{}, communication between daemons and clients is performed over TCP/IP using Apache Avro RPC \cite{AvroSpecification}.
 Avro provides an agreed upon standard for efficient serialization of data and method calls from a remote (client) process.
 Practically, the \yaq{} interface looks like a collection of methods or functions, which Avro calls ``messages''.
 Each message has defined input parameters and output return types.
@@ -140,19 +141,21 @@ Sensors would implement the ``is-sensor'' trait which defines ``\texttt{get\_mea
 Protocols which implement a trait must support all of the messages from the trait.
 Importantly, specific protocols can also implement arbitrary additional messages that are not defined by any trait.
 
-The first hardware interface barrier: Multiple incompatible protocols are used to communicate with each component of the system.
+The first hardware interface barrier: Multiple incompatible interfaces are used to communicate with each component of the system.
 \yaq{} provides a unified TCP/IP interface to all hardware peripherals based on the well-described Avro RPC protocol.
 In particular, the trait system was introduced in pursuit of our primary goal of easing the client development process.
 Clients can trust that protocols that implement a given trait will behave in similar ways.
 
 The second hardware interface barrier: Certain specialty hardware have inconvenient interface requirements.
 Since \yaq{} enables multiple machines, any hardware requirements can be addressed by putting a machine for that specific hardware on the network.
-For example, the Windows XP computer which has the interface card and drivers can be placed into a private network with only \yaq{} interface communication.
+For example, the Windows XP computer which has the obsolete interface card and drivers can be placed into a private network with only \yaq{} interface communication.
 Because each \yaq{} daemon is running in its own process, the software environment can be tailored to its needs.
 A client running up to date Python 3.10 communicates seamlessly with a daemon running Python 3.7.
 
 The third hardware interface barrier: Some hardware interfaces are blocking.
-Each \yaq{} daemon runs as a separate process (possibly not even on the same machine) and so many of the hard concurrency problems with communicating with hardware are mitigated.
+Monolithic orchestration software often necessitates separate threads for each component hardware interface, a fragile pattern in which small mistakes become difficult to find and critical errors.
+In \yaq{}, each daemon is only responsible for a single hardware interface.
+%Each \yaq{} daemon runs as a separate process (possibly not even on the same machine) and thus many of the hard concurrency problems with communicating with hardware are mitigated.
 It is expected that each message call over the \yaq{} interface will return rapidly, ensuring that client applications are not blocked for extended periods of time.
 This principle applies even when the message starts an action that might take several seconds to complete, such as homing a motor or initiating a measurement for a sensor.
 In these instances, the initial message simply starts the action and returns, with a separate message provided to retrieve results when they exist.
@@ -180,7 +183,7 @@ Unique experiments will always need custom orchestration and user experience.
 We believe that novel instrumentation development naturally and necessarily includes the creation of targeted software.
 \yaq{} is architected to encourage better software development practices when creating such programs.
 In a \yaq{} context, orchestration code and graphical control interfaces are implemented as clients.
-These clients are automatically simpler because they only need to implement the \yaq{} interface and do not need to include the vast array of hardware-specific communication protocols.
+These clients are automatically simpler because they only need to implement the \yaq{} standard and do not need to include the vast array of hardware-specific communication interfaces.
 Beyond this, clients can use traits to interact with similar hardware identically.
 A client written to perform a two dimensional fluorescence experiment using two Acton monochromators will also work with Horiba monochromators without any modification.
 
@@ -209,7 +212,7 @@ This reactor incorporates several computer-controlled valves and syringe pumps a
 The set of hardware peripherals is rapidly changing as researchers continue to test and refine their design.
 Only a few researchers are actively using the reactor during this prototyping stage.
 These researchers are experimentalists who have limited background in software development.
-The Landis Group has written very basic Python scripts to orchestrate hardware for their reactor.
+The Landis Group has written basic Python scripts to orchestrate hardware for their reactor.
 These lightweight scripts can be extensively refactored by the experimentalists as the hardware and orchestration strategy changes dramatically during WiQK development.
 This approach ensures that the Landis Group is not slowed down by complex, inflexible orchestration software.
 Once the reactor is complete, more sophisticated graphical clients will be created to accommodate end users who were not involved as the reactor was built.
@@ -254,7 +257,7 @@ This new converter will be incorporated into the existing reactor without modify
 
 Years after the original researchers leave, large monolithic acquisition programs become unknowable, undocumented, and unmaintained.
 A graduate student discovers a long standing hard-coded conversion factor that is incorrect years after implementation.
-Scientists resort to sourcing a replacement for an old, broken oscilloscope due to their reliance of their software on that particular interface; newer, cheaper options are readily available.
+Scientists resort to sourcing a replacement for an old, broken oscilloscope due to their reliance of their software on that particular interface; newer, cheaper oscilloscopes are readily available.
 A graduate student is forced to meticulously reverse engineer the LabView codebase that they inherited in order to understand the details of their experiment.
 Technical debt grows especially fast in academic environments where graduate students are constantly being replaced.
 
@@ -266,18 +269,18 @@ Tools like \texttt{yaqd-fakes} allow clients to be tested and improved outside o
 Simple, script-based clients written using the expressiveness of Python can be read and understood in hours rather than weeks.
 
 In \yaq{}, each component of an instrument can be developed and distributed separately.
-For example, two very different instruments might happen to use the same temperature sensor.
+For example, two different instruments might happen to use the same temperature sensor.
 Because the temperature sensor daemon is its own independent program, both instruments can benefit from the same daemon.
 As \yaq{} grows, the "ecosystem" of existing daemons means that future instruments become easier and easier to develop.
 Growing this ecosystem is a collaborative effort where many \yaq{} users create portable daemons that they need and share them for the community to use and improve.
 
 There are currently XX daemons in the yaq project supporting at least YY kinds of hardware.
-Because yaq is protocol based, anyone can design and publish new daemons extending our hardware support.
+Because \yaq{} is standards based, anyone can design and publish new daemons extending our hardware support.
 A living list of all daemons and supported hardware can be found on the yaq website.
 
 Software documentation is famously difficult and thankless work.
 \yaq{} attempts do automate daemon documentation as much as possible.
-Our website, https://yaq.fyi, automatically builds generated protocol reference pages for all known protocols.
+Our website, https://yaq.fyi, automatically builds generated reference pages for all known protocols.
 These pages are automatically updated when new versions are published.
 
 yaq is also being used in several smaller ways throughout UW-Madison Chemistry.
@@ -286,10 +289,10 @@ This level of collaboration is new to us in the orchestration software space.
 
 \section{Conclusion}
 
-The \yaq{} project defines a new general-purpose protocol for hardware control in the context of scientific instrumentation.
-This protocol has some of the powerful features of facility-scale protocols while remaining simple enough for feasable implementation and maintenance in small research labs.
+The \yaq{} project defines a new general-purpose standard for hardware control in the context of scientific instrumentation.
+This standard has some of the powerful features of facility-scale standards while remaining simple enough for feasible implementation and maintenance in small research labs.
 We have shown how this approach alleviates common problems through discussion and case studies.
-Designing around self-describing protocols is a productive approach that has great promise in scientific software deveopment.
+Designing around self-describing protocols is a productive approach that has great promise in scientific software development.
 
 \begin{acknowledgments}
   TODO
